DVSRegister/wwwroot/css/main.css
/* ... */
.app-c-filter-section {
  margin-bottom: 0;
}
.app-c-filter-section:not(:last-of-type) {
  border-bottom: 1px solid #b1b4b6;
}
.app-c-filter-section > summary {
  margin-bottom: 0;
}
.app-c-filter-section[open] > summary {
  margin-bottom: 15px;
}
.app-c-filter-section__summary {
  padding: 20px 0;
  cursor: pointer;
  list-style: none;
  pointer-events: none;
}
.app-c-filter-section__summary::-webkit-details-marker {
  display: none;
}
.app-c-filter-section__summary:focus {
  outline: none;
}
.app-c-filter-section__summary:focus .app-c-filter-section__summary-heading {
    outline: 3px solid transparent;
    color: #0b0c0c;
    background-color: #ffdd00;
    box-shadow: 0 -2px #ffdd00, 0 4px #0b0c0c;
    text-decoration: none;
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
}
.app-c-filter-section__summary:hover .app-c-filter-section__summary-heading {
  text-decoration: underline;
  text-decoration-thickness: max(1px, 0.0625rem);
  text-underline-offset: 0.3156em;
}
.app-c-filter-section__summary-heading {
  font-family: "GDS Transport", arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.25;
  margin: 0;
  text-underline-offset: 0.1578em;
  display: inline-block;
  padding: 0px 10px 0px 25px;
  position: relative;
  pointer-events: auto;
  cursor: pointer;
}
@media print {
  .app-c-filter-section__summary-heading {
    font-family: sans-serif;
  }
}
@media (min-width: 40.0625em) {
  .app-c-filter-section__summary-heading {
    font-size: 1.1875rem;
    line-height: 1.3157894737;
  }
}
@media print {
  .app-c-filter-section__summary-heading {
    font-size: 14pt;
    line-height: 1.15;
  }
}
.app-c-filter-section__summary-heading::before {
  content: "";
  position: absolute;
  top: 2px;
  left: 3px;
  width: 12px;
  height: 12px;
  border-bottom: 2px solid #0b0c0c;
  border-right: 2px solid #0b0c0c;
  transform: rotate(45deg);
}
details[open] > .app-c-filter-section__summary .app-c-filter-section__summary-heading::before {
    top: 10px;
    transform: rotate(-135deg);
}
.app-c-filter-section__content {
  padding: 0 0 20px 0;
}
.app-c-filter-section__content .govuk-form-group:last-child {
  margin-bottom: 0;
}

@media (max-width: 40.0525em) {
  .app-c-filter-panel__header {
    flex-direction: column;
    align-items: flex-start;
  }
  .app-c-filter-panel__count {
    margin-left: 30px;
  }
  .app-c-filter-panel__actions {
    flex-direction: column;
    gap: 10px;
  }
  .app-c-filter-panel__actions button {
    width: 100%;
  }
}
.dsit-search-filter-box {
  display: flex;
  align-items: center;
  background-color: #f3f2f1;
  padding: 20px;
  padding-bottom: 5px;
}
.dsit-search-filter-box__tags {
  font-size: 0;
  margin-bottom: 20px;
  padding-left: 0;
}
.dsit-search-filter-box__tags li {
  display: inline-block;
  margin-right: 10px;
}
.dsit-search-filter-box__tag {
  font-family: "GDS Transport", arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  background-color: #F3F2F1;
  border: 1px solid #0b0c0c;
  color: #0b0c0c;
  display: inline-block;
  margin-top: 5px;
  padding: 5px;
  text-decoration: none;
}
@media print {
  .dsit-search-filter-box__tag {
    font-family: sans-serif;
  }
}
@media (min-width: 40.0625em) {
  .dsit-search-filter-box__tag {
    font-size: 1rem;
    line-height: 1.25;
  }
}
@media print {
  .dsit-search-filter-box__tag {
    font-size: 14pt;
    line-height: 1.2;
  }
}
.dsit-search-filter-box__tag:link, .dsit-search-filter-box__tag:visited {
  color: #0b0c0c;
}
.dsit-search-filter-box__tag:focus {
  color: #0b0c0c;
  background-color: #ffdd00;
}
.dsit-search-filter-box__tag:hover {
  background-color: #0b0c0c;
  color: #ffffff;
}
.dsit-search-filter-box__tag:after {
  background-image: url(../assets/images/icon-tag-remove-cross.svg);
  content: "";
  display: inline-block;
  font-weight: bold;
  height: 10px;
  margin-left: 5px;
  vertical-align: middle;
  width: 10px;
}
.dsit-search-filter-box__tag:hover:after {
  background-image: url(../assets/images/icon-tag-remove-cross-white.svg);
}

.dsit-service-header__sign-out {
  float: right;
}
.dsit-service-header__sign-out-link {
  font-weight: 700;
  line-height: 1.8em;
}

.moj-sortable-table [aria-sort] button,
.moj-sortable-table [aria-sort] button:hover {
  background-color: transparent;
  border-width: 0;
  -webkit-box-shadow: 0 0 0 0;
  -moz-box-shadow: 0 0 0 0;
  box-shadow: 0 0 0 0;
  color: #005ea5;
  cursor: pointer;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  padding: 0 10px 0 0;
  position: relative;
  text-align: inherit;
  font-size: 1em;
  margin: 0;
}
.moj-sortable-table [aria-sort] button:focus {
  background-color: #ffdd00;
  color: #0b0c0c;
  box-shadow: 0 -2px #ffdd00, 0 4px #0b0c0c;
  outline: none;
}
.moj-sortable-table [aria-sort]:first-child button {
  right: auto;
}
.moj-sortable-table [aria-sort] button:before {
  content: " ▼";
  position: absolute;
  right: -1px;
  top: 9px;
  font-size: 0.5em;
}
.moj-sortable-table [aria-sort] button:after {
  content: " ▲";
  position: absolute;
  right: -1px;
  top: 1px;
  font-size: 0.5em;
}
.moj-sortable-table [aria-sort=ascending] button:before,
.moj-sortable-table [aria-sort=descending] button:before {
  content: none;
}
.moj-sortable-table [aria-sort=ascending] button:after {
  content: " ▲";
  font-size: 0.8em;
  position: absolute;
  right: -5px;
  top: 2px;
}
.moj-sortable-table [aria-sort=descending] button:after {
  content: " ▼";
  font-size: 0.8em;
  position: absolute;
  right: -5px;
  top: 2px;
}

.dsit-notification-banner-content > * {
  max-width: none;
}

.dsit-secondary-text-colour {
  color: #505a5f;
}

.visible-column {
    border-left: 1px solid #b1b4b6;
    padding-left: 20px;
}
/* ... */

